Created Sponsors Section **Not Working**

--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -197,12 +197,18 @@ blocks:
         href: https://forms.gle/gjaVDwnQk39KdQP2A
         color: surface-primary
     block_class: py-20 text-center
-og_image: /src/assets/th-logo-color-169.png
+  - type: gallery
+    component: ImageGallery
+    title: Image Gallery
+    style:
+      container: md
+      animate: true
+    images:
+      - /src/assets/agile.png
+      - /src/assets/c1_core_ng_rgb_r-1-.png
+      - /src/assets/computer_science_fulllogo_horizontal_full_color.png
+      - /src/assets/ey_logo_1.png
+      - /src/assets/libraries_horizontal_green.png
+      - /src/assets/office-career_fulllogo_vertical_full-color.png
+og_image: "/src/assets/th-logo-color-169.png\r"
 ---
-
-
-
-
-
-
-
