--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -201,12 +201,13 @@ blocks:
     component: ImageGallery
     title: Sponsors
     style:
-      container: md
+      container: lg
       animate: false
       surface: surface-dark
     images:
       - /src/assets/logo_ey.png
       - /src/assets/c1_core_ng_rgb_r-1-.png
+      - /src/assets/northgrum.png
       - /src/assets/logo_agile.png
       - /src/assets/libraries_horizontal_green.png
       - /src/assets/computer_science_fulllogo_horizontal_full_color.png
