--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -215,5 +215,57 @@ blocks:
       - /src/assets/stand-out-stickers-logo.png
     aspect: 1.25
     fit: contain
+  - type: gallery
+    component: ImageGallery
+    title: Grand Prize
+    style:
+      container: md
+      animate: false
+    fit: contain
+    aspect: 1.25
+    images:
+      - /src/assets/clawdius.png
+  - type: gallery
+    component: ImageGallery
+    title: Gold Prizes
+    style:
+      container: md
+      animate: false
+    fit: contain
+    aspect: 1.25
+    images:
+      - /src/assets/about-us.jpeg
+      - /src/assets/hamster.jpeg
+      - /src/assets/hamster_video.jpg
+  - type: gallery
+    component: ImageGallery
+    title: Silver Prizes
+    style:
+      container: md
+      animate: false
+    fit: contain
+    aspect: 1.25
+    images:
+      - /src/assets/about-us.jpeg
+      - /src/assets/hamster.jpeg
+      - /src/assets/hamster_video.jpg
+  - type: gallery
+    component: ImageGallery
+    title: Bronze Prizes
+    style:
+      container: md
+      animate: false
+    fit: contain
+    aspect: 1.25
+    images:
+      - /src/assets/about-us.jpeg
+      - /src/assets/hamster.jpeg
+      - /src/assets/hamster_video.jpg
+      - /src/assets/helpdesk.jpeg
+      - /src/assets/get_more_clients.jpeg
+      - /src/assets/developer.jpeg
+      - /src/assets/eco-aware.jpeg
+      - /src/assets/design.jpeg
+      - /src/assets/collecting_leads.jpeg
 og_image: /src/assets/th-logo-color-169.png
 ---
