Prizes page created with nav button

--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -4,6 +4,8 @@ main_menu:
     href: /#faq
   - label: For Sponsors
     href: /sponsor
+  - label: Prizes
+    href: /prizes
 cta_menu:
   - label: Register
     href: https://forms.gle/gjaVDwnQk39KdQP2A
@@ -11,5 +13,5 @@ footer_menus:
   - label: " "
     links:
       - label: MLH Code of Conduct
-        href: https://hackp.ac/coc
+        href: "https://hackp.ac/coc\r"
 ---
