--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -126,13 +126,16 @@ blocks:
       thumbnail: /src/assets/petcat.jpg
       embed: youtube
       image_opacity: ""
-    content: >
+    content: >+
       ## **Beginners & Experts** TribeHacks is for everyone
 
 
-      William & Mary's liberal arts model makes this event so exciting. This is an opportunity to use technology to enhance the things you're already interested and skilled in. Whether you've pioneered new machine learning techniques or you've never written a line of code in your life, we've got you covered. We are primarily geared towards college students, but we welcome recent graduates and older high school students as well. 
+      William & Mary's liberal arts model makes this event so exciting. This is an opportunity to use technology to enhance the things you're already interested and skilled in. Whether you've pioneered new machine learning techniques or you've never written a line of code in your life, we've got you covered. We are primarily geared towards college students, but we welcome recent graduates and older high school students as well.
 
-      <a name="faq"></a>
+
+
+
+
   - type: faq
     component: Faq
     title: FAQ's
@@ -215,57 +218,29 @@ blocks:
       - /src/assets/stand-out-stickers-logo.png
     aspect: 1.25
     fit: contain
-  - type: gallery
-    component: ImageGallery
-    title: Grand Prize
+  - type: text_media
+    component: TextMedia
     style:
       container: md
-      animate: false
-    fit: contain
-    aspect: 1.25
-    images:
-      - /src/assets/clawdius.png
-  - type: gallery
-    component: ImageGallery
-    title: Gold Prizes
-    style:
-      container: md
-      animate: false
-    fit: contain
-    aspect: 1.25
-    images:
-      - /src/assets/about-us.jpeg
-      - /src/assets/hamster.jpeg
-      - /src/assets/hamster_video.jpg
-  - type: gallery
-    component: ImageGallery
-    title: Silver Prizes
-    style:
-      container: md
-      animate: false
-    fit: contain
-    aspect: 1.25
-    images:
-      - /src/assets/about-us.jpeg
-      - /src/assets/hamster.jpeg
-      - /src/assets/hamster_video.jpg
-  - type: gallery
-    component: ImageGallery
-    title: Bronze Prizes
-    style:
-      container: md
-      animate: false
-    fit: contain
-    aspect: 1.25
-    images:
-      - /src/assets/about-us.jpeg
-      - /src/assets/hamster.jpeg
-      - /src/assets/hamster_video.jpg
-      - /src/assets/helpdesk.jpeg
-      - /src/assets/get_more_clients.jpeg
-      - /src/assets/developer.jpeg
-      - /src/assets/eco-aware.jpeg
-      - /src/assets/design.jpeg
-      - /src/assets/collecting_leads.jpeg
+      template: column
+      reverse: false
+    media:
+      image_size: "33"
+      title: Image
+      image_opacity: ""
+      embed: youtube
+      thumbnail: /src/assets/clawdius.png
+    content: >
+      ## Prizes
+
+
+      At tribehacks, you have the opportunity to win a wide variety of prizes. If you manage to create the best hack, you will win TBD!
+
+
+      Here are the other prizes that you can win!
+    buttons:
+      - icon_only: false
+        label: See All Prizes
+        href: /prizes
 og_image: /src/assets/th-logo-color-169.png
 ---
