add day of document to the website

--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -4,6 +4,8 @@ main_menu:
     href: /#faq
   - label: For Sponsors
     href: /sponsor
+  - label: Schedule & Important Info
+    href: https://tribehacks.notion.site/
 cta_menu:
   - label: Register
     href: https://forms.gle/gjaVDwnQk39KdQP2A
