--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -42,9 +42,13 @@ hero:
       label: Register
       href: https://forms.gle/gjaVDwnQk39KdQP2A
     - icon_only: false
+      label: Schedule & Important Info
+      href: https://tribehacks.notion.site/
+      color: surface-secondary
+    - icon_only: false
       label: Volunteer
-      color: surface-transparent
       href: https://forms.gle/EQRDime1ouv5YFGq8
+      color: surface-transparent
 blocks:
   - type: text_media
     component: TextMedia
