--- a/src/content/config/style.mdx
+++ b/src/content/config/style.mdx
@@ -20,6 +20,8 @@ surface:
     class: surface-info
   - name: success
     class: surface-success
+  - name: transparent
+    class: surface-transparent
   - name: light Slate
     class: bg-slate-200 text-dark dark:bg-slate-800 dark:text-white
   - name: bronze
